lang/tests/compile_fail/seeds_wrong_arity.stderr
error[E0080]: evaluation panicked: Vault::seeds() argument count mismatch (check #[seeds] definition on Vault)
  --> tests/compile_fail/seeds_wrong_arity.rs:14:10
   |
14 | #[derive(Accounts)]
   |          ^^^^^^^^ evaluation of `<Bad as quasar_lang::traits::ParseAccountsUnchecked<'input>>::parse_unchecked::_` failed here
